--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 
       <a href="./ASSETS/Projects/Explore-Tourist-Places-App.html" target="_blank" class="project-card">
-        <img src="https://wallpaperaccess.com/full/185305.jpg" alt="Tourism App" class="project-img" />
+        <img src="https://ds393qgzrxwzn.cloudfront.net/resize/m600x500/cat1/img/images/0/jwkvsCOubn.jpg" alt="Tourism App" class="project-img" />
         <div class="project-content">
           <h3 class="project-title">Explore-Tourist-Places-App</h3>
           <p>
