Update image source in Explore Tourist Places App

--- a/ASSETS/Projects/Explore-Tourist-Places-App.html
+++ b/ASSETS/Projects/Explore-Tourist-Places-App.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <h1>🌍 Explore Tourist Places App</h1>
-    <img src="https://wallpaperaccess.com/full/185305.jpg" alt="Tourist App" class="img" height="200px" width="500px">
+    <img src="https://ds393qgzrxwzn.cloudfront.net/resize/m600x500/cat1/img/images/0/jwkvsCOubn.jpg" alt="Tourist App" class="img" height="200px" width="500px">
 
     <h2 class="section-title">Project Description</h2>
     <p class="description">
